# bottle-openapi-3

./: LICENSE  MANIFEST.in  README.md  README.rst  dev-requirements.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
bottle_openapi_3/: __init__.py
test_bottle_openapi_3/: conftest.py  test_plugin.py
