[metadata]
name = bottle-openapi-3
url = https://github.com/cope-systems/bottle-openapi-3
description = OpenAPI Integration for Bottle
long_description = file: README.rst
author = Robert Cope
author_email = robert@copesystems.com
license = MIT
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Environment :: Plugins
    Framework :: Bottle
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
install_requires =
    bottle>=0.12.0
    openapi-core~=0.13.4
    openapi-spec-validator~=0.2.9
    six
tests_require =
    tox
    webtest

[options.packages.find]
include =
    bottle_openapi_3